Fix HTML formatting and update Instagram link

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                     <span>WhatsApp</span>
                 </a>
 
-                <a href="https://instagram.com/haasan.duski" class="link-button instagram" id="instagramLink">
+                <a href="https://www.instagram.com/can.pejyaroj?igsh=bjY5Z2MxZGJiajZy" class="link-button instagram" id="instagramLink">
                     <i class="fab fa-instagram"></i>
                     <span>Instagram</span>
                 </a>
